# aiaim

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.cursor/rules/: credentials.mdc
agend/: cli.py  session.py
aiaim/: __init__.py  agent_cli.py  cli.py  supervisor.py  task_runner.py  worker.py
scripts/: release.py
tests/: case1.md
